# sw_galaxy_map

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_NOTES_0.9.0.md  README.md  build.rs  calcolo_rotta.docx  sw_galaxy_map_cli_ratatui_skeleton.patch  sync_report.xlsx
.github/workflows/: rust.yml
crates/sw_galaxy_map_cli/: CHANGELOG.md  Cargo.toml  README.md
crates/sw_galaxy_map_cli/src/: lib.rs  main.rs  ui.rs
crates/sw_galaxy_map_cli/src/cli/: args.rs  db_runtime.rs  dispatch.rs  export.rs  mod.rs  reports.rs  shell.rs  tui.rs  typewriter.rs
crates/sw_galaxy_map_cli/src/cli/commands/: info.rs  mod.rs  near.rs  route.rs  search.rs  unknown.rs  waypoints.rs
crates/sw_galaxy_map_cli/src/cli/commands/db/: backup.rs  export.rs  mod.rs  utils.rs
crates/sw_galaxy_map_cli/src/cli/commands/route/: cleanup.rs  compute.rs  explain.rs  list.rs  mod.rs  show.rs  types.rs
crates/sw_galaxy_map_cli/src/tui/: app.rs  bridge.rs  input.rs  log.rs  mod.rs  panels.rs  render.rs  runtime.rs  types.rs
crates/sw_galaxy_map_core/: CHANGELOG.md  Cargo.toml  README.md
crates/sw_galaxy_map_core/src/: domain.rs  lib.rs  model.rs  validate.rs
crates/sw_galaxy_map_core/src/db/: db_init.rs  db_skipped_planets.rs  db_status.rs  db_update.rs  migrate.rs  mod.rs  provision.rs  queries.rs
crates/sw_galaxy_map_core/src/db/queries/: aliases.rs  mod.rs  near.rs  planets.rs  routes.rs  row_mappers.rs  search.rs  stats.rs  unknown.rs  waypoints.rs
crates/sw_galaxy_map_core/src/routing/: eta.rs  geometry.rs  hyperspace.rs  mod.rs  route_debug.rs  sublight.rs
crates/sw_galaxy_map_core/src/utils/: fuzzy.rs  mod.rs  normalize.rs  wiki.rs
crates/sw_galaxy_map_edit/: CHANGELOG.md  Cargo.toml  README.md
crates/sw_galaxy_map_edit/src/: cli.rs  main.rs
crates/sw_galaxy_map_edit/src/audit/: history.rs  log.rs  mod.rs
crates/sw_galaxy_map_edit/src/commands/: edit.rs  fields.rs  find.rs  history.rs  mod.rs  set.rs
crates/sw_galaxy_map_edit/src/db/: runtime.rs
crates/sw_galaxy_map_edit/src/edit/: apply.rs  display.rs  field.rs  mod.rs  parser.rs
crates/sw_galaxy_map_edit/src/interactive/: mod.rs  wizard.rs
crates/sw_galaxy_map_edit/src/output/: history.rs  mod.rs  planet.rs  validation.rs
crates/sw_galaxy_map_edit/src/resolve/: mod.rs  planet.rs
crates/sw_galaxy_map_edit/src/validate/: field.rs
crates/sw_galaxy_map_gui/: Cargo.toml  README.md  build.rs
crates/sw_galaxy_map_gui/src/: app.rs  lib.rs  main.rs
crates/sw_galaxy_map_sync/: Cargo.toml  change_planets_table.sql  star_wars_galaxy_systems_official_semicolon.csv  sync_report.xlsx
crates/sw_galaxy_map_sync/src/: cli.rs  db.rs  lib.rs  main.rs  models.rs  report.rs  sync.rs  utils.rs
src/: db.rs  lib.rs  main.rs  model.rs  normalize.rs
src/cli/: args.rs  color.rs  export.rs  mod.rs  validate.rs
src/cli/commands/: info.rs  mod.rs  near.rs  route.rs  search.rs  waypoints.rs
src/db/: core.rs  db_init.rs  db_skipped_planets.rs  db_status.rs  db_update.rs  migrate.rs  mod.rs  paths.rs  provision.rs  queries.rs
src/gui/: app.rs  mod.rs
src/provision/: arcgis.rs  build_sqlite.rs  db_init.rs  db_status.rs  db_update.rs  migrate.rs  mod.rs
src/routing/: collision.rs  geometry.rs  mod.rs  route_debug.rs  router.rs
src/utils/: formatting.rs  mod.rs  time.rs
tests/: routing_direct.rs  routing_endpoint_collision.rs  routing_multiple_obstacles.rs  routing_single_obstacle.rs
tests/common/: mod.rs
