[workspace]
members = [
    "crates/sw_galaxy_map_core",
    "crates/sw_galaxy_map_cli",
    "crates/sw_galaxy_map_gui",
]
resolver = "3"

[workspace.package]
version = "0.9.10"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "Star Wars galaxy explorer and navicomputer with CLI and GUI interfaces, backed by a local SQLite database"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/umpire274/sw_galaxy_map"
repository = "https://github.com/umpire274/sw_galaxy_map"
documentation = "https://github.com/umpire274/sw_galaxy_map"
keywords = ["star-wars", "navicomputer", "routing", "cli", "sqlite"]
categories = ["command-line-utilities", "visualization", "games"]

[workspace.dependencies]
anyhow = "1.0.101"
arboard = "3.6.1"
clap = { version = "4.6.0", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
unicode-normalization = "0.1.25"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
directories = "6.0.0"
chrono = "0.4.44"
atty = "0.2.14"
owo-colors = "4.3.0"
sha2 = "0.10.9"
hex = "0.4.3"
eframe = "0.33.3"
egui = "0.33.3"
rfd = "0.17.2"
shell-words = "1.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
