[package]
name = "sw_galaxy_map_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
owo-colors.workspace = true
atty.workspace = true
shell-words.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sw_galaxy_map_core = { path = "../sw_galaxy_map_core" }
