[package]
name = "sw_galaxy_map_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

description = "Command-line interface for sw_galaxy_map"

keywords = ["star-wars", "cli", "sqlite", "routing"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
owo-colors.workspace = true
atty.workspace = true
shell-words.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

sw_galaxy_map_core = { version = "0.10.0", path = "../sw_galaxy_map_core" }

[[bin]]
name = "sw_galaxy_map"
path = "src/main.rs"