[package]
name = "sw_galaxy_map_cli"
version = "0.15.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

readme = "README.md"
description = "Command-line interface for sw_galaxy_map"

keywords = ["star-wars", "cli", "sqlite", "routing"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
owo-colors.workspace = true
atty.workspace = true
shell-words.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

sw_galaxy_map_core = { version = "0.15.1", path = "../sw_galaxy_map_core" }
sw_galaxy_map_sync = { version = "0.2.0", path = "../sw_galaxy_map_sync" }
crossterm = "0.29.0"
ratatui = "0.30.0"
chrono = "0.4.44"
csv = "1.4.0"

[[bin]]
name = "sw_galaxy_map"
path = "src/main.rs"