[package]
name = "sw_galaxy_map_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

exclude = [
    "/target",
    "/res/*.sqlite",
    "/.github",
    "/dev_tools",
    "*.log"
]

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
unicode-normalization.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
directories.workspace = true
chrono.workspace = true
atty.workspace = true
sha2.workspace = true
hex.workspace = true
