[package]
name = "sw_galaxy_map_edit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Command-line editor for maintaining planet records in sw_galaxy_map"
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sw_galaxy_map_edit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

sw_galaxy_map_core = { path = "../sw_galaxy_map_core" }

[dependencies.inquire]
version = "0.7.5"
default-features = true