[package]
name = "sw_galaxy_map_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

readme = "README.md"
description = "GUI frontend for sw_galaxy_map using egui"

keywords = ["star-wars", "gui", "egui", "sqlite"]
categories = ["gui"]

include = [
    "src/**",
    "assets/**",
    "Cargo.toml",
    "README.md",
]

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
eframe.workspace = true
egui.workspace = true
rfd.workspace = true
serde_json.workspace = true
shell-words.workspace = true

sw_galaxy_map_core = { version = "0.15.1", path = "../sw_galaxy_map_core" }
sw_galaxy_map_cli = { version = "0.15.1", path = "../sw_galaxy_map_cli" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"